fix popover on mobile

--- a/packages/rocketchat-theme/client/imports/components/popover.css
+++ b/packages/rocketchat-theme/client/imports/components/popover.css
@@ -235,6 +235,7 @@
 			top: initial !important;
 			bottom: 0;
 			left: 0 !important;
+			position: fixed;
 
 			width: calc(100vw - 16px) !important;
 			margin: 8px !important;
